@@ -341,7 +341,7 @@ class TestAutov1:
         conf.add_admin( "admin@" + domain )
         conf.add_drive_mode( "auto" )
         conf.add_ca_challenges( [ "http-01" ] )
-        conf._add_line("MDPortMap 80:99")        
+        conf._add_line("MDPortMap http:99")        
         conf.add_md( dns_list )
         conf.add_vhost( TestEnv.HTTPS_PORT, domain, aliasList=[ dns_list[1] ])
         conf.install()
@@ -354,7 +354,7 @@ class TestAutov1:
         conf.add_admin( "admin@" + domain )
         conf.add_drive_mode( "auto" )
         conf.add_ca_challenges( [ "http-01" ] )
-        conf._add_line("MDPortMap 80:%s" % TestEnv.HTTP_PORT)
+        conf._add_line("MDPortMap http:%s" % TestEnv.HTTP_PORT)
         conf.add_md( dns_list )
         conf.add_vhost( TestEnv.HTTPS_PORT, domain, aliasList=[ dns_list[1] ])
         conf.install()
