@@ -380,7 +380,7 @@ class TestAutov2:
         conf.add_line( "Protocols http/1.1 acme-tls/1" )
         conf.add_drive_mode( "auto" )
         conf.add_ca_challenges( [ "tls-alpn-01" ] )
-        conf._add_line("MDPortMap 443:99")        
+        conf._add_line("MDPortMap https:99")        
         conf.add_md( dns_list )
         conf.add_vhost( TestEnv.HTTPS_PORT, domain, aliasList=[ dns_list[1] ])
         conf.install()
@@ -394,7 +394,7 @@ class TestAutov2:
         conf.add_line( "Protocols http/1.1 acme-tls/1" )
         conf.add_drive_mode( "auto" )
         conf.add_ca_challenges( [ "tls-alpn-01" ] )
-        conf._add_line("MDPortMap 443:%s" % TestEnv.HTTPS_PORT)
+        conf._add_line("MDPortMap https:%s" % TestEnv.HTTPS_PORT)
         conf.add_md( dns_list )
         conf.add_vhost( TestEnv.HTTPS_PORT, domain, aliasList=[ dns_list[1] ])
         conf.install()
